# timetable-ga

./: .gitignore  README.md  app.py  constants.py  data.py  genetic_alg.py  input.json  models.py  previous_code.py  pyproject.toml  schedule.py  test.py
