[project]
name = "timetabler-ga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Penzulo", email = "bhargav.deshpande@mitwpu.edu.in" }
]
requires-python = ">=3.10"
dependencies = [
    "prettytable>=3.12.0",
    "streamlit>=1.40.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
]
